# earth-watchface-gles

./: .gitignore  ARCHITECTURE.md  HARMONYOS_PORT_PLAN.md  OPTIMIZATIONS.md  gradle.properties  install-watch.ps1  privacy-policy.html  settings.gradle.kts
earth-watch-harmony/: oh-package.json5
earth-watch-harmony/AppScope/: app.json5
earth-watch-harmony/AppScope/resources/base/element/: string.json
earth-watch-harmony/entry/: build-profile.json5  oh-package.json5
earth-watch-harmony/entry/src/main/: module.json5
earth-watch-harmony/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
earth-watch-harmony/entry/src/main/cpp/render/: egl_core.cpp  egl_core.h  plugin_render.cpp  plugin_render.h
earth-watch-harmony/entry/src/main/cpp/render/earth/: earth_renderer.cpp  earth_renderer.h  earth_scene.cpp  earth_scene.h  gl_overlay.cpp  gl_overlay.h  gl_primitives.cpp  gl_primitives.h  stb_image_config.h
earth-watch-harmony/entry/src/main/cpp/types/libnativerender/: index.d.ts  oh-package.json5
earth-watch-harmony/entry/src/main/ets/entryability/: EntryAbility.ets
earth-watch-harmony/entry/src/main/ets/model/: BatteryProvider.ets  LocationProvider.ets  LunarCalendar.ets  NotifProvider.ets  ScreenStateProvider.ets  SunCalculator.ets  WeatherFetcher.ets
earth-watch-harmony/entry/src/main/ets/pages/: Index.ets
earth-watch-harmony/entry/src/main/resources/base/element/: string.json
wear/: build.gradle.kts  proguard-rules.pro
wear/src/main/: AndroidManifest.xml
wear/src/main/java/com/earthwatch/face/: EarthCanvasComplication.kt  EarthConfigActivity.kt  EarthGlesRenderer.kt  EarthRenderer.kt  EarthWatchFaceService.kt  GlOverlay.kt  GlPrimitives.kt  InstanceRemovedReceiver.kt  LunarCalendar.kt  NotificationCountProvider.kt  SunCalculator.kt  TextTextureCache.kt  WeatherFetcher.kt
wear/src/main/res/values/: strings.xml
wear/src/main/res/xml/: watch_face.xml
